feat: added wrapInTransaction, storeStatusInDatabase and retryOnError script entry fields